<resources>
    <string name="app_name">Fitness-Application</string>
    <string name="Login_title">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="password2">Re-type password</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="app_name2">ListVIew</string>
    <string-array name="ActivityLevels">
        <item>Little/No Exercise</item>
        <item>light exercise</item>
        <item>moderate</item>
        <item>heavy</item>
        <item>extreme</item>
    </string-array>
    <string-array name="ExerciseNames">
        <item>Pushups</item>
        <item>Calf Raises</item>
        <item>Lunges</item>
        <item>Crunches</item>
        <item>Planks</item>
        <item>Pullups</item>
        <item>Wallsits</item>
        <item>Squats</item>
        <item>Burpees</item>
        <item>High Knees</item>
        <item>Tricep Dips</item>
        <item>Wallsit</item>
        <item>Skaters</item>
        <item>Cardio</item>
    </string-array>
</resources>
