<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <FrameLayout
        android:layout_width="345dp"
        android:layout_height="540dp"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="91dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintVertical_bias="0.3"
        android:background="@color/regBackground"
        android:paddingTop="5dp"
        >

        <TextView
            android:id="@+id/titlereg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/textBlue"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/fname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textStyle="bold"
            android:hint="@string/fname"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/curved_edt"/>

        <EditText
            android:id="@+id/lname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textStyle="bold"
            android:hint="@string/lname"
            android:layout_marginTop="170dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/curved_edt"
            />

        <EditText
            android:id="@+id/emailreg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            android:hint="@string/email"
            android:layout_marginTop="240dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/curved_edt"
            />

        <EditText
            android:id="@+id/passwordreg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:hint="@string/password"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/curved_edt"
            />

        <EditText
            android:id="@+id/passwordreg2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:hint="@string/password2"
            android:layout_marginTop="380dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/curved_edt"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:layout_marginTop="470dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/curved_btn"
            android:textColor="@color/textBlue"
            />

        <Button
            android:id="@+id/clear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textStyle="bold"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="470dp"
            android:background="@drawable/curved_btn"
            android:textColor="@color/textBlue"
            />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>