<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_colour"
    >

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="390dp"
        android:layout_height="360dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintVertical_bias="0.4"
        >

        <TextView
            android:id="@+id/login-title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_title"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/textBlue"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="120dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textStyle="bold"
            android:layout_marginLeft="47dp"
            android:padding="10dp"
            android:background="@drawable/curved_edt"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:layout_marginTop="190dp"
            android:hint="@string/password"
            android:layout_marginLeft="47dp"
            android:background="@drawable/curved_edt"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/blogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Login_title"
            android:layout_marginTop="265dp"
            android:layout_marginLeft="40dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="17sp"
            android:background="@android:color/transparent"
            android:alpha="0.4"
            />

        <Button
            android:id="@+id/bregister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="265dp"
            android:layout_marginLeft="190dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textSize="17sp"
            android:alpha="0.4"
            />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>